add search and execute plugin

--- a/public/popup.html
+++ b/public/popup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/build/popup.css" />
-        <script defer src="/build/popup.js"></script>
+        <link rel="stylesheet" href="popup.css" />
+        <script defer src="popup.js" charset="UTF-8"></script>
     </head>
     <body></body>
 </html>
