--- a/public/options.html
+++ b/public/options.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/build/options.css" />
-        <script defer src="/build/options.js"></script>
+        <link rel="stylesheet" href="options.css" />
+        <script defer src="options.js"></script>
     </head>
     <body></body>
 </html>
