update sugession test case

--- a/public/popup.html
+++ b/public/popup.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
         <link rel="stylesheet" href="popup.css" />
         <script defer src="popup.js" charset="UTF-8"></script>
     </head>
-    <body></body>
+    <body style="margin: 0" ></body>
 </html>
