--- a/public/popup.html
+++ b/public/popup.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css" />
         <link rel="stylesheet" href="popup.css" />
         <script defer src="popup.js" charset="UTF-8"></script>
     </head>
